--- a/src/ItsMavey/.env
+++ b/src/ItsMavey/.env
@@ -1,4 +1,6 @@
-TWITCH_CLIENT_ID=05x1w5zupnqsmoj74kq1wjgu5y3534
-TWITCH_ACCESS_TOKEN=u7qqtwv8ss8cxvxlksx18ooihsz2op
-TWITCH_STREAMER_NAME=ItsMavey
+FERNET_KEY=F7JkkjX5RFELPPPxo9RlsqJvkxVfyhlbzstDVhbEScc=
+TWITCH_CLIENT_ID=v6y619hcv0kpmsdb7od4zssi0vl7vy
+TWITCH_CLIENT_SECRET=dsxuwht72355hqc65qz8wfpsgt7o7p
+TWITCH_STREAMER_NAME=itsmavey
 SECRET_KEY=django-insecure-b*9_y*43s%41z!x^)lw=)a@4#s-s2)18pv$*5-hxa7kyeoj-xa
+DEBUG=True
